LxTile: text alignment fix; LxModal: notification visibility fix (#1264)

--- a/src/styles/lx-notifications.css
+++ b/src/styles/lx-notifications.css
@@ -124,7 +124,6 @@ p.lx-subtitle {
     padding-inline-start: 0;
     margin-top: 0.5rem;
     gap: 0.1rem;
-    z-index: 999;
   }
 
   .lx .lx-notifications-list .lx-notification .lx-main {
